--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -1,10 +1,15 @@
 ---
+import SectionTitle from './SectionTitle.astro';
+import Section from './Atoms/Section.astro';
+import SectionContent from './Atoms/SectionContent.astro';
 ---
-<section>
-    <h2>Contact</h2>
-    <p>メールまたはTwitterにてご連絡ください。</p>
-    <p>
-        <i class="fa-solid fa-envelope"></i> メール:
-        <a>aya172957@ayutaso.com</a>
-    </p>
-</section>
+<Section>
+    <SectionTitle>Contact</SectionTitle>
+    <SectionContent>
+        <p>メールまたはTwitterにてご連絡ください。</p>
+        <p>
+            <i class="fa-solid fa-envelope"></i> メール:
+            <a>aya172957@ayutaso.com</a>
+        </p>
+    </SectionContent>
+</Section>
