--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,19 @@
 ---
+import { css } from '../../styled-system/css'
 ---
 
-<header>
-    <h1>あゆたそどっとこむ</h1>
+<header class={css({
+    "background": "#828fff",
+    "color": "white",
+    "padding": "1rem 0",
+    "textAlign": "center",
+})}>
+    <h1 class={css({
+        "fontFamily": "'Hachi Maru Pop', sans-serif",
+        "fontWeight": 100,
+        "fontSize": "2rem",
+        "marginBottom": 5,
+    })}>あゆたそどっとこむ</h1>
     <nav>
         <a href="/">ホーム</a> ・
         <a href="/about">About</a> ・
@@ -10,16 +21,3 @@
     </nav>
 </header>
 
-
-<style>
-header {
-    background: #828fff;
-    color: white;
-    padding: 1rem 0;
-    text-align: center;
-}
-header h1 {
-    font-family: "Hachi Maru Pop", sans-serif;
-    font-weight: 100;
-}
-</style>
