--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,17 +8,7 @@ import ContactSection from '../components/ContactSection.astro';
 import SnsIcons from '../components/SnsIcons.astro';
 import Career from '../components/Career.astro';
 
-const careerItems = [
-    { year: "April 2022", title: "大学入学", description: "東京都立大学に入学し、コンピュータサイエンスを専攻" },
-    { year: "December 2022", title: "ICPC Asia Yokohama Regional", description: "国内予選を突破しICPCアジア予選に出場 53位を獲得" },
-    { year: "August 2023", title: "Software engineer Intern at pixiv Inc.", description: "pixivコミックのバックエンド開発に携わる" },
-    { year: "October 2023", title: "プログラミングコンテスト 30th", description: "PGBattle2023 大学専門学校の部30位 アシスト賞" },
-    { year: "December 2023", title: "ハッカソン 最優秀賞", description: "Google Developer Solution Challenge Japan 2023 最優秀賞 & チームラボ賞"},
-    { year: "February 2024 ~", title: "Software engineer Intern at Monoxer", description: "iOS, Android, Web Frotend, Backend フルスタックで開発"},
-    { year: "August 2024", title: "Software engineer Intern at COLOPL, inc.", description: "ソーシャルゲームのサーバサイド開発を経験"},
-    { year: "September 2024", title: "CyberAgent ACE 2024 個人賞", description: "CyberAgentのインターンにて個人賞を受賞"},
-    { year: "Now", title: "", description: "" }
-];
+
 ---
 
 <Layout>
@@ -26,7 +16,7 @@ const careerItems = [
     <SkillsSection />
     <WorksSection />
     <ArticlesSection />
-    <Career items={careerItems} />
+    <Career />
     <ContactSection />
     <SnsIcons />
 </Layout>
