--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -64,10 +64,6 @@ const { Content } = await post.render();
         })}>#{tag}</span>
       ))}
     </div>
-      <Content class={css({
-        "lineHeight": 1.8,
-        "fontSize": "1rem",
-        "color": "#444",
-      })} />
+      <Content class="blog"/>
   </article>
 </Layout>
