--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,11 +49,17 @@ section {
 /* ブログ共通スタイル */
 h2 {
   font-family: 'Zen Kaku Gothic New variant0', sans-serif;
-  font-size: 1.8rem;
+  font-weight: bold;
+  font-size: 1.5rem;
   color: #404950;
-  margin-bottom: 1rem;
-  border-bottom: 2px solid #828fff;
   padding-bottom: 0.5rem;
+  padding-top: 0.4rem;
+}
+
+h3 {
+  font-family: 'Zen Kaku Gothic New', sans-serif;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 li {
@@ -112,4 +118,8 @@ pre {
   padding: 1rem;
   overflow-x: auto;
 
+}
+
+p {
+  padding: 0.2rem;
 }
