--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -22,7 +22,7 @@ if (!post) {
 const { Content } = await post.render();
 ---
 
-<Layout>
+<Layout class="blog">
   <article class={css({
     "maxWidth": "800px",
     "margin": "2rem auto",
