--- a/src/components/Career.astro
+++ b/src/components/Career.astro
@@ -88,11 +88,11 @@ const items = [
                             width: "100%",
                         },
                     })}>
-                        <h3 class={css({
+                        <div class={css({
                             color: "#0077cc",
                             fontWeight: 100,
                             fontSize: "1.5rem",
-                        })}>{item.year}</h3>
+                        })}>{item.year}</div>
                         <h4 class={css({
                             fontSize: "1.2rem",
                             color: "#333",
