--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -3,7 +3,7 @@ import { css } from '../../styled-system/css'
 
 ---
 
-<h2 class={css({
+<div class={css({
     "borderBottom": "2px solid #828fff",
     "paddingBottom": "0.5rem",
     "margin": "1rem",
@@ -13,4 +13,4 @@ import { css } from '../../styled-system/css'
     "fontWeight": 600
 })}>
     <slot />
-</h2>
+</div>
