use astro font util

--- a/src/components/ProgressBar.astro
+++ b/src/components/ProgressBar.astro
@@ -25,7 +25,7 @@ const { percentage, color = "linear-gradient(to right, #0077cc, #00a0ff)" } = As
     font-size: 1rem;
     margin-bottom: 5px;
     color: #333;
-    font-family: "Noto Sans JP", sans-serif;
+    font-family: 'Noto Sans JP Variable', sans-serif;
 }
 
 .progress-bar {
