--- a/src/components/SkillsSection.astro
+++ b/src/components/SkillsSection.astro
@@ -86,7 +86,7 @@ const skillCardTextStyle = css({
     "display": "flex",
     "color": "#666666",
     "justifyContent": "center",
-    "fontFamily": "Noto Sans JP, Varela Round, sans-serif",
+    "fontFamily": "'Noto Sans JP Variable', sans-serif",
 })
 ---
 
