--- a/src/components/Sns/TwitterIcon.astro
+++ b/src/components/Sns/TwitterIcon.astro
@@ -1,8 +1,9 @@
 ---
+import { FaTwitter } from "react-icons/fa";
 ---
 
 <a href="https://x.com/aya172957" target="_blank" class="sns-icon">
-    <i class="fa-brands fa-twitter"></i>
+    <FaTwitter />
 </a>
 
 <style>
