--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 /* ベースのスタイル */
 body {
-    font-family: "Noto Sans JP", sans-serif;
+    font-family: 'Noto Sans JP Variable', sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
