--- a/src/components/Sns/GitHubIcon.astro
+++ b/src/components/Sns/GitHubIcon.astro
@@ -1,8 +1,9 @@
 ---
+import { FaGithub } from "react-icons/fa";
 ---
 
 <a href="https://github.com/Atotti" target="_blank" class="sns-icon">
-    <i class="fa-brands fa-github"></i>
+    <FaGithub />
 </a>
 
 
