--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,10 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import '@fontsource-variable/noto-sans-jp';
+import '@fontsource/zen-kaku-gothic-new';
+import '@fontsource/varela-round';
 
-import { css, cx} from '../../styled-system/css'
 
 import '../styles/global.css';
 import '../index.css';
@@ -12,9 +14,6 @@ import '../index.css';
 <html lang="ja">
 	<head>
 		<meta charset="UTF-8" />
-    	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
-    	<link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Rampart+One&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
-    	<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/jpg" href="/icon.jpg" />
 		<meta name="generator" content={Astro.generator} />
